# modowners

./: Cargo.toml  README.md  run-tests
.github/: CODEOWNERS
src/: codemod.rs  main.rs
src/syntax/: ast.rs  lexer.rs  parser.rs
src/syntax/snapshots/: modowners__syntax__parser__tests__comments.snap  modowners__syntax__parser__tests__complex.snap  modowners__syntax__parser__tests__empty.snap  modowners__syntax__parser__tests__inline_comment.snap  modowners__syntax__parser__tests__single.snap
tests/: add.t  help.t  remove.t
