[package]
name = "modowners"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
logos = "0.13.0"
rowan = "0.15.11"

[dev-dependencies]
insta = "1.31.0"
